[workspace]
resolver = "2"
members = ["wbm"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex"
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2"
http = "1"
quickcheck = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha1 = "0.10"
thiserror = "2"
url = "2"
