[package]
name = "archivindex-cdx-store"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
archivindex = { path = "../core/" }
chrono = { workspace = true }
futures = "0.3"
rocksdb = { version = "0.23", default-features = false, features = [
    "bindgen-runtime",
    "zstd",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zstd = { workspace = true }
