[package]
name = "archivindex-wbm"
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[features]
validation = []

[dependencies]
chrono = { workspace = true }
data-encoding = { workspace = true }
http = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
