[package]
name = "archivindex-wxj-cli"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex"
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[dependencies]
archivindex-wbm = { path = "../wbm/" }
archivindex-wxj = { path = "../wxj/" }
chrono = { workspace = true }
cli-helpers = "0.1"
csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zstd = { workspace = true }
